[package]
name = "rythonc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.8", features = ["derive", "cargo"] }
wild = "2"
python-ast = { path = "../python-ast-rs", version = "0.1" }
rust-format = "0.3"
fern = "0.6"
log = "0.4"