[package]
name = "rythonc"
version = "0.1.4"
edition = "2021"
description = "A command-line Python to Rust compiler, at this point, very incomplete."
license = "Apache-2.0"
license_file = "LICENSE"
repository = "https://github.com/rexlunae/rythonc.git"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4", features = ["derive", "cargo"] }
wild = "2"
rust-format = "0.3"
fern = "0.6"
log = "0.4"
humantime = "2.1.0"
#python-ast = "0.1"
python-ast = {path = "../python-ast-rs", version = "0.1.7"}
